product-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service-deployment
  labels:
    app: cloudmart-product-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloudmart-product-service
  template:
    metadata:
      labels:
        app: cloudmart-product-service
    spec:
      containers:
        - name: product-service
          image: your-dockerhub-username/product-service:latest
          ports:
            - containerPort: 4000
