product-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  labels:
    app: cloudmart-product-service
spec:
  selector:
    app: cloudmart-product-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
  type: ClusterIP
